--- a/templates/Reservation/index.html.twig
+++ b/templates/Reservation/index.html.twig
@@ -3,6 +3,32 @@
 {% block body %}
 
 <div class="container">
-    <h1> page Reservation ici</h1>
+    <div class="card card-body text-center" id="card-reservation-index">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card" id="card-reser">
+                    <div class="card-header" id="card-reser">
+                        Espace public
+                    </div>
+                    <img src="img/Gusto_8b.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary" id="btn">Réserver ici</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card" id="card-reser">
+                    <div class="card-header" id="card-reser">
+                        Espaces privées
+                    </div>
+                    <img src="img/Gusto_9b.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary" id="btn">Réserver ici</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 </div>
 {% endblock %}
